# magic

./: .gitignore  CMakeLists.txt  README.md
bundle/: .gitignore  CMakeLists.txt
cmake/: compiler_flags_GNU_CXX.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_CXX.cmake  compiler_flags_Intel_Fortran.cmake  magic_compiler_flags.cmake  magic_extra_macros.cmake
modulefiles/: magic_hera.intel.lua
src/: CMakeLists.txt
src/magic/: CMakeLists.txt  Fortran.h  Traits.h
src/magic/Fields/: Fields.cc  Fields.h  FieldsFortran.h
src/magic/Geometry/: Geometry.cc  Geometry.h  GeometryFortran.h  magic_geom.interface.F90  magic_geom_mod.f90
src/magic/IO/: NetCDFIO.cc  NetCDFIO.h
src/magic/Increment/: Increment.cc  Increment.h
src/magic/State/: State.cc  State.h
test/: CMakeLists.txt
test/executables/: CMakeLists.txt  TestGeometry.cc  TestState.cc
test/testinput/: geometry.yaml
ush/: build.sh  load.sh  module-setup.sh
